--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Leiter</title>
     <meta name="description" content="テキスト">
     <meta name="viewport" content="width=device-width",initial-scale=1>
-    <link rel="stylesheet" href="../../publick/stylesheet/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="img/favicon.ico">
     <link rel="shortcut icon" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/favicon.ico">
   </head>
