--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Leiter</title>
     <meta name="description" content="テキスト">
     <meta name="viewport" content="width=device-width",initial-scale=1>
-    <link rel="stylesheet" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/styleheet/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="img/favicon.ico">
-    <link rel="shortcut icon" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/favicon.ico">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Leiter1021/Portfolio/main/favicon.ico">
   </head>
   <body>
     <header>
@@ -44,35 +44,35 @@
       </div>
       <div class="contents">
         <div class="image">
-          <imag src="works-sample.jpg">
+          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
           <div class="text">
             <h5>作品名が入る</h5>
             <p>Design/Coding(Responsive)</p>
           </div>
         </div>
         <div class="image">
-          <imag src="works-sample.jpg">
+          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
           <div class="text">
             <h5>作品名が入る</h5>
             <p>Design/Coding(Responsive)/WordPress</p>
           </div>
         </div>
         <div class="image">
-          <imag src="works-sample.jpg">
+          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
           <div class="text">
             <h5>作品名が入る</h5>
             <p>Design</p>
           </div>
         </div>
         <div class="image-last">
-          <imag src="works-sample.jpg">
+          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
           <div class="text">
             <h5>作品名が入る</h5>
             <p>Banner Design</p>
           </div>
         </div>
         <div class="image-last">
-          <imag src="works-sample.jpg">
+          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
           <div class="text">
             <h5>作品名が入る</h5>
             <p>Banner design</p>
@@ -85,42 +85,42 @@
         <div class="skill">
           <h1>SKILL</h1>
           <div class="pm html">
-            <img src="icon_skill.png">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">HTML5/CSS3</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
             </ul>
           </div>
           <div class="pm html">
-            <img src="icon_skill.png">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">HTML5/CSS3</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
             </ul>
           </div>
           <div class="pm wordpress">
-            <img src="icon_skill.png">
+            <img src="ihttps://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">WordPress</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
             </ul>
           </div>
           <div class="pm JavaScript">
-            <img src="icon_skill.png">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">JavaScript</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
             </ul>
           </div>
           <div class="pm Photoshop">
-            <img src="icon_skill.png">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">Photoshop</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
             </ul>
           </div>
           <div class="pm lllustrator">
-            <img src="icon_skill.png">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">lllustrator</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
@@ -132,7 +132,7 @@
       <div class="about-wrapper">
         <div class="about">
           <h1>ABOUT</h1>
-          <img src="profile.jpg">
+          <img src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
           <p>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります</p
         </div>
       </div>
