--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </ul>
           </div>
           <div class="pm wordpress">
-            <img src="ihttps://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
+            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
             <ul>
               <li class="skill-title">WordPress</li>
               <li>テキストが入りますテキストが入りますテキストが入ります</li>
