--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Leiter</title>
     <meta name="description" content="テキスト">
     <meta name="viewport" content="width=device-width",initial-scale=1>
-    <link rel="stylesheet" href="https://github.com/Leiter1021/Portfolio/stylesheet.css">
+    <link rel="stylesheet" href="https://leiter1021.github.io/Portfolio/stylesheet.css">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Leiter1021/Portfolio/main/favicon.ico">
   </head>
   <body>
