--- a/index.html
+++ b/index.html
@@ -5,138 +5,162 @@
     <title>Leiter</title>
     <meta name="description" content="テキスト">
     <meta name="viewport" content="width=device-width",initial-scale=1>
-    <link rel="stylesheet" href="https://leiter1021.github.io/Portfolio/stylesheet.css">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Leiter1021/Portfolio/main/favicon.ico">
+    <link rel="stylesheet" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/styleheet/stylesheet.css">
+    <link rel="stylesheet" href="img/favicon.ico">
+    <link rel="shortcut icon" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/favicon.ico">
   </head>
   <body>
-    <header>
+    <header style="overflow: hidden">
       <div class="header-left">
         <a href="#">Leiter</a>
       </div>
-      <div class="header-right">
-        <ul>
-          <li>WORKS</li>
-          <li>SKILL</li>
-          <li>ABOUT</li>
-          <li>CONTACT</li>
-        </ul>
+      <div class="header-right" >
+        <a class="link" href="#works">WORKS</a>
+        <a class="link" href="#skill">SKILL</a>
+        <a class="link" href="#about">ABOUT</a>
+        <a class="link" href="#contact">CONTACT</a>
+
       </div>
     </header>
 
     <main>
-      <div class="top-wrapper">
-        <div class="title">
-          <h1>Leiter</h1>
-          <h3>PORTFOLIO</h3>
-          <p>
-            ユーザーとお客様が心から満足できる<br>
-            サイトをお作りいたします。<br>
-            デザインとコーティングは<br>
-            お任せください。<br>
-          </p>
+       <div class="top-wrapper">
+         <div class="title">
+           <h1>Leiter</h1>
+           <h3>PORTFOLIO</h3>
+           <p>
+             ユーザーとお客様が心から満足できる<br>
+             サイトをお作りいたします。<br>
+             デザインとコーティングは<br>
+             お任せください。<br>
+           </p>
+        </div>
+      </div>
+
+      <div class="works-wrapper" style="overflow: hidden">
+        <div class="works" id="works">
+          <h2>works</h2>
        </div>
-     </div>
+       <div class="contents">
+         <div class="image">
+           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <div class="text">
+             <h5>作品名が入る</h5>
+             <p>Design/Coding(Responsive)</p>
+           </div>
+         </div>
+         <div class="image">
+           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <div class="text">
+             <h5>作品名が入る</h5>
+             <p>Design/Coding(Responsive)/WordPress</p>
+           </div>
+         </div>
+         <div class="image">
+           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <div class="text">
+             <h5>作品名が入る</h5>
+             <p>Design</p>
+           </div>
+         </div>
+         <div class="image-last">
+           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <div class="text">
+             <h5>作品名が入る</h5>
+             <p>Banner Design</p>
+           </div>
+         </div>
+         <div class="image-last">
+          <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <div class="text">
+             <h5>作品名が入る</h5>
+             <p>Banner design</p>
+           </div>
+         </div>
+       </div>
+       </div>
 
-     <div class="works-wrapper">
-       <div class="works">
-         <h2>works</h2>
-      </div>
-      <div class="contents">
-        <div class="image">
-          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
-          <div class="text">
-            <h5>作品名が入る</h5>
-            <p>Design/Coding(Responsive)</p>
-          </div>
-        </div>
-        <div class="image">
-          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
-          <div class="text">
-            <h5>作品名が入る</h5>
-            <p>Design/Coding(Responsive)/WordPress</p>
-          </div>
-        </div>
-        <div class="image">
-          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
-          <div class="text">
-            <h5>作品名が入る</h5>
-            <p>Design</p>
-          </div>
-        </div>
-        <div class="image-last">
-          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
-          <div class="text">
-            <h5>作品名が入る</h5>
-            <p>Banner Design</p>
-          </div>
-        </div>
-        <div class="image-last">
-          <imag src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample.jpg?raw=true">
-          <div class="text">
-            <h5>作品名が入る</h5>
-            <p>Banner design</p>
-          </div>
-        </div>
-      </div>
-      </div>
+       <div class="skill-wrapper" style="overflow: hidden">
+         <div class="skill" id="skill">
+           <h1>SKILL</h1>
+           <div class="pm html">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">HTML5/CSS3</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+           <div class="pm html">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">HTML5/CSS3</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+           <div class="pm wordpress">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">WordPress</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+           <div class="pm JavaScript">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">JavaScript</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+           <div class="pm Photoshop">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">Photoshop</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+           <div class="pm lllustrator">
+             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <ul>
+               <li class="skill-title">lllustrator</li>
+               <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
+             </ul>
+           </div>
+         </div>
+       </div>
 
-      <div class="skill-wrapper">
-        <div class="skill">
-          <h1>SKILL</h1>
-          <div class="pm html">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">HTML5/CSS3</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-          <div class="pm html">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">HTML5/CSS3</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-          <div class="pm wordpress">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">WordPress</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-          <div class="pm JavaScript">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">JavaScript</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-          <div class="pm Photoshop">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">Photoshop</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-          <div class="pm lllustrator">
-            <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
-            <ul>
-              <li class="skill-title">lllustrator</li>
-              <li>テキストが入りますテキストが入りますテキストが入ります</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+       <div class="about-wrapper" style="overflow: hidden">
+         <div class="about" id="about">
+           <h1>ABOUT</h1>
+           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+           <p>
+             テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>
+             <br>
+             テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+           </p>
+         </div>
+       </div>
 
-      <div class="about-wrapper">
-        <div class="about">
-          <h1>ABOUT</h1>
-          <img src="https://github.com/Leiter1021/Portfolio/blob/main/profile.jpg?raw=true">
-          <p>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります</p
-        </div>
-      </div>
+       <div class="contact-wrapper">
+         <div class="contact" id="contact">
+           <h2>Contact</h2>
+           <p>
+             お問い合わせは
+             SNSかメールにてお願いいたします.
+           </p>
+           <ul>
+             <li><a href="#">Twitter</li>
+             <li><a href="#">Instagram</li>
+             <li>leiter1021@gmail.com</li>
+           </ul>
+         </div>
+       </div>
 
- 
+       <footer>
+           <p class="inner">&copy;2022 Leiter</p>
+       </footer>
+     </main>
+
+
 
   </body>
 </html>
