--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Leiter</title>
     <meta name="description" content="テキスト">
     <meta name="viewport" content="width=device-width",initial-scale=1>
-    <link rel="stylesheet" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/styleheet/stylesheet.css">
-    <link rel="stylesheet" href="img/favicon.ico">
-    <link rel="shortcut icon" href="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/favicon.ico">
+    <link rel="stylesheet" href="https://github.com/Leiter1021/Portfolio/blob/stylesheet.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Leiter1021/Portfolio/main/favicon.ico">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Leiter1021/Portfolio/main/favicon.ico">
   </head>
   <body>
     <header style="overflow: hidden">
@@ -43,35 +43,35 @@
        </div>
        <div class="contents">
          <div class="image">
-           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <img src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample-thumb.jpg?raw=true">
            <div class="text">
              <h5>作品名が入る</h5>
              <p>Design/Coding(Responsive)</p>
            </div>
          </div>
          <div class="image">
-           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <img src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample-thumb.jpg?raw=true">
            <div class="text">
              <h5>作品名が入る</h5>
              <p>Design/Coding(Responsive)/WordPress</p>
            </div>
          </div>
          <div class="image">
-           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <img src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample-thumb.jpg?raw=true">
            <div class="text">
              <h5>作品名が入る</h5>
              <p>Design</p>
            </div>
          </div>
          <div class="image-last">
-           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+           <img src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample-thumb.jpg?raw=true">
            <div class="text">
              <h5>作品名が入る</h5>
              <p>Banner Design</p>
            </div>
          </div>
          <div class="image-last">
-          <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/works-sample-thumb.jpg">
+          <img src="https://github.com/Leiter1021/Portfolio/blob/main/works-sample-thumb.jpg?raw=true">
            <div class="text">
              <h5>作品名が入る</h5>
              <p>Banner design</p>
@@ -84,42 +84,42 @@
          <div class="skill" id="skill">
            <h1>SKILL</h1>
            <div class="pm html">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">HTML5/CSS3</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
              </ul>
            </div>
            <div class="pm html">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">HTML5/CSS3</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
              </ul>
            </div>
            <div class="pm wordpress">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">WordPress</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
              </ul>
            </div>
            <div class="pm JavaScript">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">JavaScript</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
              </ul>
            </div>
            <div class="pm Photoshop">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">Photoshop</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
              </ul>
            </div>
            <div class="pm lllustrator">
-             <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+             <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
              <ul>
                <li class="skill-title">lllustrator</li>
                <li>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</li>
@@ -131,7 +131,7 @@
        <div class="about-wrapper" style="overflow: hidden">
          <div class="about" id="about">
            <h1>ABOUT</h1>
-           <img src="C:/Users/user/Desktop/HTML 練習/ポートフォリオ１/publick/images/icon_skill.png">
+           <img src="https://github.com/Leiter1021/Portfolio/blob/main/icon_skill.png?raw=true">
            <p>
              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>
              <br>
